--- a/1-Schemas/A-entity_record_schema/12_service_contract.yml
+++ b/1-Schemas/A-entity_record_schema/12_service_contract.yml
@@ -31,13 +31,13 @@ properties:
       - type: string
         format: date
 
-  covers_asset_roles:
-    description: the list of roles or more specifically the assets installed in the roles covered by the contract
+  covers_asset_functional-locations:
+    description: the list of functional-locations or more specifically the assets installed in the functional-locations covered by the contract
     oneOf: 
       - type: null
       - type: array
         items:
-          $ref: "./02_role.yml"
+          $ref: "./02_functional-location.yml"
   
   covers_assets:
     description: the list of assets covered by the contract (any parts in the inventory covered by the contract must be associated with an asset record)
@@ -58,10 +58,10 @@ properties:
   contract_document:
     $ref: "./00_common_definitions.yml#/definitions/attachment_def"
 
-  # RECORD PROPERTIES
+  # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
 
   record_retirement_information:
-    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
+    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
