--- a/1-Schemas/A-entity_record_schema/36_work_order_documentation.yml
+++ b/1-Schemas/A-entity_record_schema/36_work_order_documentation.yml
@@ -97,7 +97,7 @@ properties:
 
   # Note: the failures are reported on follow-up work requests. The linkage between a followup work order and work order documentation is found on the work order schema
 
-# RECORD PROPERTIES
+# COMMON RECORD PROPERTIES
 
   duplicate_record_of:
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
