--- a/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml
+++ b/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml
@@ -12,6 +12,11 @@ properties:
     type: string
     description: a noun or short noun-phrase name of the class
 
+  class_description:
+    oneOf:
+      - type: null
+      - type: string
+
   synonym_names:
     oneOf: 
       - type: null
@@ -20,17 +25,12 @@ properties:
           type: string
     description: other synonymous names that may be used by a user in search 
 
-  class_definition:
-    oneOf:
-      - type: null
-      - type: string
-
   can_be_applied_to_instances:
     type: boolean
     $comment: |
-      a "FALSE" value indicates that the class is meant to be a structural part of the classification tree, and cannot be used to classify any entity (i.e. asset, role, space, etc).
+      a "FALSE" value indicates that the class is meant to be a structural part of the classification tree, and cannot be used to classify any entity (i.e. asset, functional-location, physical-location, etc).
   
-  # RECORD PROPERTIES
+  # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
 
@@ -38,4 +38,4 @@ properties:
 
   record_retirement_information:
     
-    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
+    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
