--- a/4-Class_Dependent_Specifications/A-asset_class_properties/01_pump.yml
+++ b/4-Class_Dependent_Specifications/A-asset_class_properties/01_pump.yml
@@ -25,7 +25,7 @@ properties:
     oneOf:
       - type: null
       - type: string
-    description: Indicates how the pump is oriented in 3D space
+    description: Indicates how the pump is oriented in 3D physical-location
     enum:
       - "horizontal"
       - "vertical"
