--- a/4-Class_Dependent_Specifications/A-asset_class_properties/12_boiler.yml
+++ b/4-Class_Dependent_Specifications/A-asset_class_properties/12_boiler.yml
@@ -26,9 +26,9 @@ properties:
       - type: string
     description: Indicates the boiled/heated medium within the boiler
     enum:
-      - Water
-      - Steam
-      - Glycol
+      - water
+      - steam
+      - glycol
 
   heat_rate:
     oneOf:
