--- a/4-Class_Dependent_Specifications/A-asset_class_properties/14_pressure_piping.yml
+++ b/4-Class_Dependent_Specifications/A-asset_class_properties/14_pressure_piping.yml
@@ -32,13 +32,13 @@ properties:
       - type: string
     description: Indicates the medium within the pressure piping
     enum:
-      - "Water"
-      - "Steam"
-      - "Glycol"
-      - "Refrigerant"
-      - "Compressed Air"
-      - "Digester Gas"
-      - "Ozone"
+      - "water"
+      - "steam"
+      - "glycol"
+      - "refrigerant"
+      - "compressed air"
+      - "digester gas"
+      - "ozone"
 
   special_application:
     oneOf:
