--- a/1-Schemas/A-entity_record_schema/06_tool_master.yml
+++ b/1-Schemas/A-entity_record_schema/06_tool_master.yml
@@ -67,13 +67,13 @@ properties:
           then set the value to true;
           else set the value to false.
 
-# RECORD PROPERTIES
+# COMMON RECORD PROPERTIES
 #==============================
 
   duplicate_record_of:
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
 
   record_retirement_information:
-    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
+    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
 
 $comment: ASMP does not expect the tool item master to be widely used during the initial adoption of Maximo - we expect that most tools would initially be represented as un-stocked.  
