--- a/1-Schemas/A-entity_record_schema/41_meter.yml
+++ b/1-Schemas/A-entity_record_schema/41_meter.yml
@@ -23,11 +23,11 @@ properties:
       - type: null
     description: identifier of the asset associated with this meter.
   
-  role:
+  functional-location:
     oneOf: 
-      - $ref: "./02_role.yml"
+      - $ref: "./02_functional-location.yml"
       - type: null
-    description: identifier of the role associated with this meter.
+    description: identifier of the functional-location associated with this meter.
 
   meter_name:
     type:
@@ -66,7 +66,7 @@ properties:
       - "null"
     description: is the latest know meter reading
 
-# RECORD PROPERTIES
+# COMMON RECORD PROPERTIES
 
   duplicate_record_of:
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def" 
