--- a/1-Schemas/B-entity_class_object_schema/03_physical_location_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/03_physical_location_class.yml
@@ -1,6 +1,5 @@
----
-title: discrete activity classification object
-$id: discreteActivityClassObject
+title: functional-location classification object
+$id: physicalLocationClassObject
 $schema: "http://json-schema.org/draft-07/schema#"
 type: object
 
@@ -9,6 +8,6 @@ properties:
   allOf:
     - $ref: "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
     #inherit the definitions and rules from th "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
-    
+
   parent_class:
-    $ref: B-entity_class_object_schema/32_discrete_activity_class.yml
+    $ref: B-entity_class_object_schema/03_space_class.yml
